@@ -1,7 +1,11 @@
 apply plugin: "kotlin"
+apply plugin: "kotlin-spring"
 apply plugin: "groovy"
+apply plugin: "org.springframework.boot"
+apply plugin: "io.spring.dependency-management"
 apply plugin: "distribution"
 apply plugin: "com.bmuschko.docker-remote-api"
+apply plugin: "idea"
 
 sourceSets {
     infra {
@@ -12,68 +16,80 @@ sourceSets {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-    compile "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlinVersion"
-    compile "org.jetbrains.kotlin:kotlin-script-util:$kotlinVersion"
-    compile "io.ktor:ktor-server-netty:$ktorVersion"
-    compile "io.ktor:ktor-server-core:$ktorVersion"
-    compile "io.ktor:ktor-auth:$ktorVersion"
-    compile "io.ktor:ktor-jackson:$ktorVersion"
-    compile "io.ktor:ktor-metrics:$ktorVersion"
-    compile "io.ktor:ktor-client-core:$ktorVersion"
-    compile "io.ktor:ktor-client-core-jvm:$ktorVersion"
-    compile "io.ktor:ktor-client-apache:$ktorVersion"
-    compile "io.ktor:ktor-client-json-jvm:$ktorVersion"
-    compile "io.ktor:ktor-client-jackson:$ktorVersion"
-    compile "io.ktor:ktor-client-logging-jvm:$ktorVersion", {
-        exclude module: "slf4j-simple"
-    }
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
-    compile "ch.qos.logback:logback-classic:$logbackVersion"
-    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
-    compile "org.apache.commons:commons-lang3:$commonsLang3Version"
-    compile "com.google.guava:guava:$guavaVersion"
-    compile "com.cronutils:cron-utils:$cronUtilsVersion"
-    compile "com.zaxxer:HikariCP:$hikariCpVersion"
-    compile "org.quartz-scheduler:quartz:$quartzSchedulerVersion"
-    compile "org.quartz-scheduler:quartz-jobs:$quartzSchedulerVersion"
-    compile "org.jooq:jooq:$jooqVersion"
-    compile "org.postgresql:postgresql:$postgresqlVersion"
-    compile "org.elasticsearch.client:elasticsearch-rest-high-level-client:$elasticSearchVersion"
-    compile "org.codehaus.groovy:groovy:$groovyVersion"
-    compile "org.codehaus.groovy:groovy-jsr223:$groovyVersion"
-    compile "org.codehaus.groovy:groovy-json:$groovyVersion"
-    compile "org.codehaus.groovy:groovy-xml:$groovyVersion"
+    compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile "org.springframework.boot:spring-boot-starter-security"
+    compile "org.springframework.boot:spring-boot-starter-webflux"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin"
+    compile "org.jetbrains.kotlin:kotlin-reflect"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-compiler-embeddable"
+    compile "org.jetbrains.kotlin:kotlin-script-util"
 
-    testCompile "io.ktor:ktor-server-tests:$ktorVersion"
-    testCompile "org.spockframework:spock-core:$spockVersion"
-    testCompile "org.awaitility:awaitility:$awaitilityVersion"
-    testCompile "org.awaitility:awaitility-groovy:$awaitilityVersion"
-    testCompile "net.bytebuddy:byte-buddy:$byteBuddyVersion"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.9.9"
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.9"
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.9"
+    compile "org.apache.commons:commons-lang3:3.8.1"
+    compile "com.google.guava:guava:27.0.1-jre"
+    compile "com.cronutils:cron-utils:8.0.0"
+    compile "org.quartz-scheduler:quartz:2.3.0"
+    compile "org.quartz-scheduler:quartz-jobs:2.3.0"
+    compile "org.jooq:jooq:3.11.7"
+    compile "org.elasticsearch.client:elasticsearch-rest-high-level-client:6.5.4"
+    compile "org.postgresql:postgresql:42.2.5"
+    compile "org.codehaus.groovy:groovy:2.5.5"
+    compile "org.codehaus.groovy:groovy-jsr223:2.5.5"
+    compile "org.codehaus.groovy:groovy-json:2.5.5"
+    compile "org.codehaus.groovy:groovy-xml:2.5.5"
+
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("io.projectreactor:reactor-test")
+    testCompile("org.springframework.security:spring-security-test")
+
+    testCompile "org.spockframework:spock-spring:1.2-groovy-2.5"
+    testCompile "org.awaitility:awaitility:3.1.3"
+    testCompile "org.awaitility:awaitility-groovy:3.1.3"
 }
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 compileKotlin {
-    kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
 }
 
+springBoot {
+    buildInfo()
+    mainClassName = "lit.fass.litfass.server.ServerApplicationKt"
+}
+bootJar {
+    enabled = false
+}
 jar {
+    enabled = true
     baseName = project.name
     manifest {
         attributes "Implementation-Title": "LITFASS"
         attributes "Implementation-Version": version
-        attributes "Main-Class": "lit.fass.litfass.server.AppKt"
+        attributes "Main-Class": "lit.fass.litfass.server.ServerApplicationKt"
     }
 }
-
 task allJar(type: Jar) {
     classifier "all"
     manifest {
         attributes "Implementation-Title": "LITFASS"
         attributes "Implementation-Version": version
-        attributes "Main-Class": "lit.fass.litfass.server.AppKt"
+        attributes "Main-Class": "lit.fass.litfass.server.ServerApplicationKt"
     }
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
@@ -84,7 +100,7 @@ distributions {
     def runFile
     doFirst {
         runFile = File.createTempFile("run", ".sh")
-        runFile.write """#!/bin/sh\njava -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -server -ea -classpath "./*:./lib/*" lit.fass.litfass.server.AppKt"""
+        runFile.write """#!/bin/sh\njava -XX:+UseG1GC -XX:+UseStringDeduplication -XX:+HeapDumpOnOutOfMemoryError -server -ea -classpath "./*:./lib/*" lit.fass.litfass.server.ServerApplicationKt"""
         runFile.executable = true
         runFile.deleteOnExit()
     }
@@ -115,9 +131,6 @@ task prepareImage(type: Copy) {
     include "${project.name}-${version}/${project.name}-${version}.jar"
     from sourceSets.infra.allSource.srcDirs
     include "Dockerfile"
-    from sourceSets.infra.resources.srcDirs
-    include "application.conf"
-    include "logback.xml"
     into "${buildDir}/docker/"
     doLast {
         ant.move file: "${buildDir}/docker/${project.name}-${version}/lib/", todir: "${buildDir}/docker/"
